Cambios en el home

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro';
         href="/" 
         class="inline-block bg-purple-600 text-white px-8 py-3 rounded-full hover:bg-purple-700 transition-all hover:scale-105 animate-fade-in-delay-2"
       >
-        Volver al inicio
+        Volver
       </a>
     </div>
   </div>
