Test de usuario correcto

--- a/src/components/IconCarousel.astro
+++ b/src/components/IconCarousel.astro
@@ -6,8 +6,9 @@ import {
 } from 'react-icons/fa';
 import { 
   SiTailwindcss, SiTypescript, SiAstro, SiFirebase, 
-  SiFigma, SiVisualstudiocode, SiPostgresql, SiMongodb 
+  SiFigma, SiPostgresql, SiMongodb 
 } from 'react-icons/si';
+import { VscVscode } from 'react-icons/vsc';
 import Icon from './Icon';
 
 interface Tool {
@@ -35,7 +36,7 @@ const tools: Tool[] = [
   { icon: FaDocker, name: 'Docker', color: 'hover:text-[#2496ED]' },
   { icon: FaAws, name: 'AWS', color: 'hover:text-[#FF9900]' },
   { icon: SiFigma, name: 'Figma', color: 'hover:text-[#F24E1E]' },
-  { icon: SiVisualstudiocode, name: 'VS Code', color: 'hover:text-[#007ACC]' },
+  { icon: VscVscode, name: 'VS Code', color: 'hover:text-[#007ACC]' },
 ];
 ---
 
